build/log/idf_py_stdout_output_102162
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/nagyrichard/Documents/Smart_Lock/Firmware/build/bootloader/esp-idf/esptool_py && /home/nagyrichard/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/nagyrichard/ESP/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/nagyrichard/Documents/Smart_Lock/Firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x5500 bytes. 0x2b00 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj
FAILED: esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj 
/home/nagyrichard/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20240530/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nagyrichard/Documents/Smart_Lock/Firmware/build/config -I/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include -I/home/nagyrichard/ESP/esp-idf/components/newlib/platform_include -I/home/nagyrichard/ESP/esp-idf/components/freertos/config/include -I/home/nagyrichard/ESP/esp-idf/components/freertos/config/include/freertos -I/home/nagyrichard/ESP/esp-idf/components/freertos/config/riscv/include -I/home/nagyrichard/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nagyrichard/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/nagyrichard/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/nagyrichard/ESP/esp-idf/components/freertos/esp_additions/include -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/include -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/include/soc -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/dma/include -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/ldo/include -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/nagyrichard/ESP/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/nagyrichard/ESP/esp-idf/components/heap/include -I/home/nagyrichard/ESP/esp-idf/components/log/include -I/home/nagyrichard/ESP/esp-idf/components/soc/include -I/home/nagyrichard/ESP/esp-idf/components/soc/esp32c6 -I/home/nagyrichard/ESP/esp-idf/components/soc/esp32c6/include -I/home/nagyrichard/ESP/esp-idf/components/hal/platform_port/include -I/home/nagyrichard/ESP/esp-idf/components/hal/esp32c6/include -I/home/nagyrichard/ESP/esp-idf/components/hal/include -I/home/nagyrichard/ESP/esp-idf/components/esp_rom/include -I/home/nagyrichard/ESP/esp-idf/components/esp_rom/include/esp32c6 -I/home/nagyrichard/ESP/esp-idf/components/esp_rom/esp32c6 -I/home/nagyrichard/ESP/esp-idf/components/esp_common/include -I/home/nagyrichard/ESP/esp-idf/components/esp_system/include -I/home/nagyrichard/ESP/esp-idf/components/esp_system/port/soc -I/home/nagyrichard/ESP/esp-idf/components/esp_system/port/include/riscv -I/home/nagyrichard/ESP/esp-idf/components/esp_system/port/include/private -I/home/nagyrichard/ESP/esp-idf/components/riscv/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/include/apps -I/home/nagyrichard/ESP/esp-idf/components/lwip/include/apps/sntp -I/home/nagyrichard/ESP/esp-idf/components/lwip/lwip/src/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/port/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/port/freertos/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/port/esp32xx/include -I/home/nagyrichard/ESP/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/nagyrichard/ESP/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/nagyrichard/ESP/esp-idf/components/esp_driver_uart/include -I/home/nagyrichard/ESP/esp-idf/components/vfs/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/nagyrichard/Documents/Smart_Lock/Firmware=. -fmacro-prefix-map=/home/nagyrichard/ESP/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj -MF esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj.d -o esp-idf/uart_driver/CMakeFiles/__idf_uart_driver.dir/src/uart_driver.cpp.obj -c /home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp
In file included from /home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:1:
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp: In member function 'esp_err_t UartDriver::UartDriver::init(uart_port_t, uart_config_t, uint8_t, uint8_t, uint8_t, uint8_t, uint8_t, uint8_t, uint8_t, QueueDefinition**, uint8_t)':
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include/uart_driver.hpp:20:38: error: 'GPIO_NUM_6' was not declared in this scope
   20 |     #define ESP_DEFAULT_UART_RX_PIN (GPIO_NUM_6)
      |                                      ^~~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:12:58: note: in expansion of macro 'ESP_DEFAULT_UART_RX_PIN'
   12 |         if(uartPort != ESP_DEFAULT_UART_PORT || rxPin != ESP_DEFAULT_UART_RX_PIN || txPin != ESP_DEFAULT_UART_TX_PIN) {
      |                                                          ^~~~~~~~~~~~~~~~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include/uart_driver.hpp:19:38: error: 'GPIO_NUM' was not declared in this scope; did you mean 'ETS_GPIO_INUM'?
   19 |     #define ESP_DEFAULT_UART_TX_PIN (GPIO_NUM 5)
      |                                      ^~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:12:94: note: in expansion of macro 'ESP_DEFAULT_UART_TX_PIN'
   12 |         if(uartPort != ESP_DEFAULT_UART_PORT || rxPin != ESP_DEFAULT_UART_RX_PIN || txPin != ESP_DEFAULT_UART_TX_PIN) {
      |                                                                                              ^~~~~~~~~~~~~~~~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include/uart_driver.hpp:19:47: error: expected ')' before numeric constant
   19 |     #define ESP_DEFAULT_UART_TX_PIN (GPIO_NUM 5)
      |                                     ~         ^
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:12:94: note: in expansion of macro 'ESP_DEFAULT_UART_TX_PIN'
   12 |         if(uartPort != ESP_DEFAULT_UART_PORT || rxPin != ESP_DEFAULT_UART_RX_PIN || txPin != ESP_DEFAULT_UART_TX_PIN) {
      |                                                                                              ^~~~~~~~~~~~~~~~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:15:10: error: expected ')' before 'espCheck'
   15 |         }
      |          ^
      |          )
   16 | 
   17 |         espCheck = uart_param_config(ESP_DEFAULT_UART_PORT, &uartConfig);
      |         ~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:12:11: note: to match this '('
   12 |         if(uartPort != ESP_DEFAULT_UART_PORT || rxPin != ESP_DEFAULT_UART_RX_PIN || txPin != ESP_DEFAULT_UART_TX_PIN) {
      |           ^
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:17:73: warning: suggest braces around empty body in an 'if' statement [-Wempty-body]
   17 |         espCheck = uart_param_config(ESP_DEFAULT_UART_PORT, &uartConfig);
      |                                                                         ^
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include/uart_driver.hpp:19:38: error: 'GPIO_NUM' was not declared in this scope; did you mean 'ETS_GPIO_INUM'?
   19 |     #define ESP_DEFAULT_UART_TX_PIN (GPIO_NUM 5)
      |                                      ^~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:18:56: note: in expansion of macro 'ESP_DEFAULT_UART_TX_PIN'
   18 |         espCheck = uart_set_pin(ESP_DEFAULT_UART_PORT, ESP_DEFAULT_UART_TX_PIN, ESP_DEFAULT_UART_RX_PIN, ESP_DEFAULT_UART_CTS_PIN, ESP_DEFAULT_UART_RTS_PIN);
      |                                                        ^~~~~~~~~~~~~~~~~~~~~~~
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/include/uart_driver.hpp:19:47: error: expected ')' before numeric constant
   19 |     #define ESP_DEFAULT_UART_TX_PIN (GPIO_NUM 5)
      |                                     ~         ^
/home/nagyrichard/Documents/Smart_Lock/Firmware/components/uart_driver/src/uart_driver.cpp:18:56: note: in expansion of macro 'ESP_DEFAULT_UART_TX_PIN'
   18 |         espCheck = uart_set_pin(ESP_DEFAULT_UART_PORT, ESP_DEFAULT_UART_TX_PIN, ESP_DEFAULT_UART_RX_PIN, ESP_DEFAULT_UART_CTS_PIN, ESP_DEFAULT_UART_RTS_PIN);
      |                                                        ^~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
